--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <marquee><em><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe3q3i0b6Z8b7AveCfkRCLwGlYFGeIUHCfsvEagI1YvMYSZidB" width="200px" height="300px"><img width=""="200px" src="https://s3-ap-southeast-1.amazonaws.com/subscriber.images/maths/2016/06/21093213/triangles2.jpg" height="300px"></em></marquee>
   <br>
   <br>
+  <p>Equilateral triangle has all sides equal</p>
+  <p>Isosceles triangle has two sides and two base angles equal</p>
+  <p>Scalene triangle no sides are equal</p>
   <div class="container">
       <div class="transbox">
         <h1>Triangle_tracker</h1>
