--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Triangle Tracker</title>
-  <link href="CSS/styles.css" type="text/css" rel="stylesheet">//this links the css to the index.html file
+  <link href="CSS/styles.css" type="text/css" rel="stylesheet">
+<!--  // This links the styles.css to the index.html file -->
 </head>
-<script src="js/script.js" type="text/javascript"></script>//this links javascript to index.html file
+<script src="js/script.js" type="text/javascript"></script>
+<!--   // This links the javascript to the index.html file -->
 <body>
   <marquee><em><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQe3q3i0b6Z8b7AveCfkRCLwGlYFGeIUHCfsvEagI1YvMYSZidB" width="200px" height="300px"><img width=""="200px" src="https://s3-ap-southeast-1.amazonaws.com/subscriber.images/maths/2016/06/21093213/triangles2.jpg" height="300px"></em></marquee>
   <br>
@@ -24,7 +26,8 @@
     <br>
     <br>
 
-    <button type="button" onclick="triangle()">submit</button>//this link displays the output
+    <button type="button" onclick="triangle()">submit</button>
+<!--         // This link displays the output -->
 
       </div>
     </div>
